--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
@@ -120,8 +120,8 @@
                                 <div class="chart-container">
                                     <h1 class="text-center mt-1">@fiscalPlanDTO.Name</h1>
                                     <div class="input-group monthPicker mt-3">
-                                        <input id="home-monthSelector" type="text" class="monthSelector form-control ms-auto" value="" aria-label="Month Selection" readonly>
-                                        <span class="input-group-text me-auto calendar-button"><i class="bi bi-calendar"></i></span>
+                                        <input id="home-monthSelector" type="text" class="monthSelector form-control" value="" aria-label="Month Selection" readonly>
+                                        <span class="input-group-text calendar-button"><i class="bi bi-calendar"></i></span>
                                     </div>                                    
                                     <h5 id="home-overspending" class="text-center mt-5">
                                         Overspending: @fiscalPlanDTO.Overspending.ToString("C2", Model.Culture)
